## v0.5.0 - 2014-Nov-26

* Fix bug that prevented loading an application from the command line in another directory.
* Compatibility: `FileBacked#path_to` is now `FileBacked#resolve_file_path` to prevent conflict with `Presentation#path_to`.
* Make `inspect` representation of assets more useful.
* Add convenience methods for collections of assets by type on presentations:
  `.layers`, `.groups`, `.cameras`, `.lights`, `.components`, `.models`, `.materials`,
  `.images`, `.behaviors`, `.aliases`, `.paths`, `.anchor_points`, `.texts`
* Fix bug that prevented behavior instances from having proper `name` or `sourcepath` attribute values.
* Added `.hierarchy` to presentations and assets for printing the scene graph.

## v0.4.5 - 2014-Nov-19

* Added a large amount of documentation.
* Minor code refactoring:
  * Most (internal) Presentation methods that took a scene graph element as the argument now take an asset.
  * All `FileBacked` assets now have `save!` and `save_as`.

## v0.4.1 - 2014-Nov-16

* Update `MetaData.xml` for tests to newest version.
* Source paths for images/textures normalize the path (forward slashes and no leading `./`).
* Added `app.main` as a simpler alias for `app.main_presentation`.
* Add support for paths and anchor points, including `mypath.anchors` as an array of anchor points.
* Assets present in MetaData and presentation, but not yet hand-entered into the hierarchy, now work and default to inherit from `Asset`.

## v0.4.0 - 2014-Nov-11
* Switch attribute filtering again; now all attributes are inline in the `find()` hash, and the four special keys are prefixed with an underscore: `_type`, `_slide`, `_master`, and `_under`.

## v0.3.0 - 2014-Nov-10
* Switch attribute filtering to use `attr:{ … }` instead of `attributes:{ … }`
* Attribute matching now requires that a requested attribute be present, or else the asset matching fails.