@@ -1,3 +1,3 @@
 class RUIC
-	VERSION = '0.5.0'
+	VERSION = '0.5.1'
 end
